# evaluating-agi

./: .env.example  .gitignore  AGENTS.md  COMPETITION.md  README.md  benchpress.ipynb  evaluating-agi.ipynb  pyproject.toml  tutorial.ipynb
evaluating_agi/: _modidx.py  benchpress.py  core.py
nbs/: 00_core.ipynb  benchpress.ipynb  explore.ipynb  index.ipynb  nbdev.yml  random_benchmark-run_id_Run_1_gpt-4.1-mini.run.json  random_benchmark-run_id_Run_2_gemini-2.5-flash.run.json  random_benchmark-run_id_Run_2_gpt-4.1-mini.run.json  random_benchmark-run_id_Run_3_gemini-2.5-flash.run.json  random_benchmark-run_id_Run_3_grok-3-beta.run.json  random_benchmark-run_id_Run_4_grok-3-beta.run.json  random_benchmark.task.json  workbench.ipynb
